# opengrips

./: .gitignore  NOTICE  README.md  mkdocs.yml  pyproject.toml
docs/: README.md
src/engine/: CMakeLists.txt  vcpkg.json
