[project]
name = "opengrips"
version = "0.1.0"
description = ""
authors = [
    {name = "Leandro 'Leo' Ajo"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blacksheep (>=2.6.2,<3.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)",
    "mkdocstrings[python] (>=1.0.4,<2.0.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "duckdb (>=1.5.3,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "perspective-python (>=4.5.0,<5.0.0)",
    "ollama (>=0.6.2,<0.7.0)",
    "pybind11 (>=3.0.4,<4.0.0)",
    "protobuf (>=7.35.0,<8.0.0)",
    "jupyterlab (>=4.5.7,<5.0.0)",
    "pydeck (>=0.9.2,<0.10.0)",
    "ipyleaflet (>=0.20.0,<0.21.0)",
    "jupyterlab-nvdashboard (>=0.13.0,<0.14.0)",
    "voila (>=0.5.12,<0.6.0)"
]

# no [dependency-groups] yet!
# { include-group = {group_name string} }
# tool.poetry.group.{group_name} \n optional=bool
# poetry add pytest --group test
# exclude optional groups or include with --without and --with and --only
# poetry remove app --group docs
# poetry sync --flags

[tool.poetry]
packages = [
    { include = "domain", from = "src" },
    { include = "server", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
